--- a/.env.dist
+++ b/.env.dist
@@ -4,3 +4,9 @@ ENVIRONMENT=development
 #INSTAGRAM 
 API_URL=https://api.instagram.com/v1/
 ACCESS_TOKEN=4027763067.446a32d.bc151f5ff24f4aadaaa4058ffe16b0f2
+
+#TWITTER
+CONSUMER_KEY=AgRPIN0d6paaTzL8xzFlf2qvX
+CONSUMER_SERCRET=2gWET7MAyjJKP3RnEGQXnHWSjz71JvE1V0mvHYQeSikVlsxKsc
+ACCESS_TOKEN_T=134824550-4a0ay6iXh6kOYUzOXyKFefpUdOg1cwr7zMBM3T4s
+ACCESS_TOKEN_SECRET=4QgFMTFM0N5Or2S9ESd4iSBKAtOhbeqWDkWw1yIESJRdA
