--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "vlucas/phpdotenv": "^2.0",
         "davegardnerisme/nsqphp": "dev-master",
         "elasticsearch/elasticsearch": "^2.1",
-        "haridarshan/instagram-php": "^2.2"
+        "haridarshan/instagram-php": "^2.2",
+        "abraham/twitteroauth": "^0.7.1"
     },
     "license": "MIT",
     "authors": [
